--- a/package.json
+++ b/package.json
@@ -9,31 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.513.0",
-    "next": "15.3.3",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0",
-    "@next/mdx": "^14.0.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/mdx": "^2.0.0",
-    "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^4.4.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.513.0",
+    "next": "15.3.3",
+    "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.4.6",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "react-markdown": "^9.0.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "reading-time": "^1.5.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
